nginxAndDebianContainersWithPVCvolumeStorageClassLocal.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-and-debian-with-pvc-storageclass-local
spec:
  volumes:
    - name: pv-storageclass-local-example
      persistentVolumeClaim:
        claimName: pv-claim-storageclass-local
  containers:
    - name: nginx-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
		volumeMounts: 
        - mountPath: "/usr/share/nginx/html"
          name: pv-storageclass-local-example
    - name: debian-pv-container
      image: debian
		volumeMounts: 
        - mountPath: "/host-vol"
          name: pv-storageclass-local-example
		command: ["/bin/sh", "-c", "echo Introduction to K8s > /host-vol/index.html; sleep 3600"]
