nginxWithPVCvolumeStorageClassLocal.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-pvc-storageclass-local
spec:
  volumes:
    - name: pv-storageclass-local-example
      persistentVolumeClaim:
        claimName: pv-claim-storageclass-local
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-storageclass-local-example
