ingressExampleOfVirtualHost.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: virtual-host-ingress
  namespace: default
spec:
  rules:
  - host: blue.example.com
	http:
	  paths:
	  - backend:
		  serviceName: webserver-blue-svc
		  servicePort: 80
  - host: green.example.com
	http:
	  paths:
	  - backend:
		  serviceName: webserver-green-svc
		  servicePort: 80
